Use switcheroo-control to find discrete GPUs

Previously, we only asked powerdevil, and it did not work on Nvidia GPUs.

BUG: 449106